# gpglib2

./: .gitignore  .readthedocs.yaml  .travis.yml  README.rst  example.py  find  format  lint  pylama.ini  pyproject.toml  setup.py  test.sh  tox.ini
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst
docs/docs/: about.rst  examples.rst
docs/sphinx/: conf.py  requirements.txt
gpglib/: errors.py  packet_parser.py  structures.py  utils.py  version.py
gpglib/content_parsers/: __init__.py  base.py  crypt.py  data.py  delegators.py  keys.py  session_keys.py
tests/: conftest.py  test_decryption.py  test_keys.py
tests/benchmarks/: base.py  naive.py
tests/data/: generate_test_data.sh
tests/data/encrypted/mdc/dsa/3des/bzip2/: big.gpg  small.gpg
tests/data/encrypted/mdc/dsa/3des/none/: big.gpg  small.gpg
tests/data/encrypted/mdc/dsa/3des/zip/: big.gpg  small.gpg
tests/data/encrypted/mdc/dsa/3des/zlib/: big.gpg  small.gpg
tests/data/encrypted/mdc/dsa/aes/bzip2/: big.gpg  small.gpg
tests/data/gpg/: pubring.gpg  pubring.kbx  trustdb.gpg
tests/data/gpg/openpgp-revocs.d/: A02F07AF335D3212FEB29C44FF5D18CBDBE4C62B.rev  F93E6E1B45D1C037B42650DE52320610E94B004B.rev
tests/data/gpg/private-keys-v1.d/: 5BDA82585C8F018276B8A29E7B142073C7CD55AD.key  60D957AB36281553A8609F90F0D3421E5984621D.key  B21F86180DAD201F95E6CD3130525E3BE8E44FFD.key  D178A55036B4491102A3456C789E21036B598124.key
tests/data/keys/: key.public.dsa.gpg  key.public.rsa.gpg  key.secret.dsa.gpg  key.secret.rsa.gpg
tests/helpers/: data.py
tools/: venv
(+118 files in other folders)
