[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpglib2"
dynamic = ["version"]
description = "A python3 compatible fork of gpglib, a Library for decrypting gpg that doesn't shell out to gpg"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.8"
authors = [
    { name = "Stephen Moore", email = "stephen@delfick.com" },
]
keywords = [
    "decrypt",
    "gpg",
]
dependencies = [
    "bitstring==4.1.4",
    "pycryptodome==3.19.1",
]

[project.optional-dependencies]
tests = [
    "noseOfYeti[black]==2.4.3",
    "pytest==7.4.3",
    "pytest-helpers-namespace==2021.12.29",
]

[tool.hatch.version]
path = "gpglib/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/gpglib",
]

[tool.hatch.build.targets.wheel]
include = [
    "/gpglib",
]

[tool.black]
line-length = 100
include = '\.py$'
exclude = '''
/(
     \.git
   | \.tox
   | dist
   | tools/\.python
)/
'''

[tool.isort]
profile = "black"
skip_glob = [
   ".git/*",
   ".tox/*",
   "dist/*",
   "tools/.*",
]

[tool.mypy]
plugins = 'noseOfYeti.plugins.mypy'
ignore_missing_imports = true
show_column_numbers = true
allow_redefinition = true
